--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ iframe {
     width: 100vw;
 }
 </style>
-<iframe src="http://35.200.205.124/"></iframe>
+<iframe src="kurukshetratwf.pythonanywhere.com"></iframe>
