--- a/index.html
+++ b/index.html
@@ -11,4 +11,4 @@ iframe {
     width: 100vw;
 }
 </style>
-<iframe src='kurukshetratwf.pythonanywhere.com'></iframe>
+<iframe src='http://kurukshetratwf.pythonanywhere.com/'></iframe>
